; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/extr_obs-properties.c_list_data_free.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/extr_obs-properties.c_list_data_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.list_data = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.list_data*)* @list_data_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @list_data_free(%struct.list_data* %0) #0 {
  %2 = alloca %struct.list_data*, align 8
  %3 = alloca i64, align 8
  store %struct.list_data* %0, %struct.list_data** %2, align 8
  store i64 0, i64* %3, align 8
  br label %4

4:                                                ; preds = %20, %1
  %5 = load i64, i64* %3, align 8
  %6 = load %struct.list_data*, %struct.list_data** %2, align 8
  %7 = getelementptr inbounds %struct.list_data, %struct.list_data* %6, i32 0, i32 0
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = icmp ult i64 %5, %9
  br i1 %10, label %11, label %23

11:                                               ; preds = %4
  %12 = load %struct.list_data*, %struct.list_data** %2, align 8
  %13 = load %struct.list_data*, %struct.list_data** %2, align 8
  %14 = getelementptr inbounds %struct.list_data, %struct.list_data* %13, i32 0, i32 0
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 1
  %16 = load i64, i64* %15, align 8
  %17 = load i64, i64* %3, align 8
  %18 = add i64 %16, %17
  %19 = call i32 @list_item_free(%struct.list_data* %12, i64 %18)
  br label %20

20:                                               ; preds = %11
  %21 = load i64, i64* %3, align 8
  %22 = add i64 %21, 1
  store i64 %22, i64* %3, align 8
  br label %4

23:                                               ; preds = %4
  %24 = load %struct.list_data*, %struct.list_data** %2, align 8
  %25 = getelementptr inbounds %struct.list_data, %struct.list_data* %24, i32 0, i32 0
  %26 = bitcast %struct.TYPE_2__* %25 to { i64, i64 }*
  %27 = getelementptr inbounds { i64, i64 }, { i64, i64 }* %26, i32 0, i32 0
  %28 = load i64, i64* %27, align 8
  %29 = getelementptr inbounds { i64, i64 }, { i64, i64 }* %26, i32 0, i32 1
  %30 = load i64, i64* %29, align 8
  %31 = call i32 @da_free(i64 %28, i64 %30)
  ret void
}

declare dso_local i32 @list_item_free(%struct.list_data*, i64) #1

declare dso_local i32 @da_free(i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
